--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "axios": "^1.3.5",
-    "webpack": "^5.79.0",
-    "webpack-cli": "^5.0.1"
+    "date-fns": "^2.30.0",
+    "webpack": "^5.82.0",
+    "webpack-cli": "^5.1.0"
   }
 }
